opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_handshake"
bug-reports: "https://github.com/janestreet/hardcaml_handshake/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_handshake.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_handshake/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "base"
  "hardcaml"
  "ppx_deriving_hardcaml"
  "ppx_jane"
  "dune"                  {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml Handshake"
description: "
Library for constructing circuits with a pair of valid and ready handshake signals.
"
